# Candlecraft

./: .env.template  .gitignore  ARCHITECTURE.md  CHANGELOG.md  IMPROVEMENTS.md  INDICATORS_README.md  LICENSE  README.md  pull_crypto.py  pull_ohlcv.py  pull_us-eq.py  pyproject.toml  requirements.txt  🎯 CORRECTED PRODUCTION DATA LAYER ARCHITECTURE (20.md
.github/workflows/: ci.yml  publish.yml
Future-Plans/: ARCHITECTURE_ANALYSIS.md  PARSER_ROUTER_DESIGN.md  REFACTORING_SUMMARY.md
Legacy Scripts/: my_ohlcv.py
archive/legacy-scripts/: README.md
archive/legacy-scripts/Legacy Scripts/: pull_crypto.py  pull_fx.py
candlecraft/: __init__.py  api.py  models.py  providers.py  utils.py
candlecraft/indicators/: __init__.py  adx.py  atr.py  bollinger.py  ema.py  macd.py  obv.py  rsi.py  sma.py  stochastic.py  vwap.py
docs/: api.md  cli.md
examples/: __init__.py  pull_all.py  pull_crypto.py  pull_equities.py  pull_forex.py  quickstart.py  with_mmmm.py
indicators/: adx.py  atr.py  bollinger.py  ema.py  macd.py  obv.py  rsi.py  sma.py  stochastic.py  vwap.py
src/: __init__.py
src/database/: __init__.py  manager.py
src/models/: __init__.py  ohlcv.py
src/providers/: __init__.py  base.py  crypto.py  equities.py  forex.py
src/utils/: __init__.py  config.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_indicators.py  test_ohlcv_pull.py  test_unit_api.py
