[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candlecraft"
version = "0.2.0"
description = "Unified OHLCV fetching for crypto, forex, and equities with multi-provider support and technical indicators"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AlfredAlpino"}
]
maintainers = [
    {name = "AlfredAlpino"}
]
keywords = ["ohlcv", "crypto", "forex", "equity", "trading", "binance", "twelvedata", "financial-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "python-binance>=1.0.0",
    "websocket-client>=1.6.0",
    "twelvedata>=1.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/alfredalpino/Candlecraft"
Documentation = "https://github.com/alfredalpino/Candlecraft/blob/main/ARCHITECTURE.md"
Repository = "https://github.com/alfredalpino/Candlecraft"
Issues = "https://github.com/alfredalpino/Candlecraft/issues"

[tool.setuptools.packages.find]
include = ["candlecraft*"]

[tool.setuptools.package-data]
candlecraft = ["py.typed", "indicators/*.py"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that call live external APIs (require API keys)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/test_ohlcv_pull.py" = ["E501", "W293"]
"candlecraft/indicators/*.py" = ["E501", "W293"]
